Fix pointer events on mobile in musicvideo

--- a/app/javascript/pawoo_music/containers/musicvideo/musicvideo.scss
+++ b/app/javascript/pawoo_music/containers/musicvideo/musicvideo.scss
@@ -30,6 +30,7 @@
 
   .canvas-container {
     canvas {
+      pointer-events: none;
       object-fit: contain;
       width: 100%;
       height: 100%;
